--- a/main.html
+++ b/main.html
@@ -9,8 +9,19 @@
 <body>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
-		<h1>3 random images</h1>
+		
 </script>
+	<h1>3 random images</h1>
+	<nav>
+		<ul>
+			<li><a href"">Home</a></li>
+			<li><a href"">About us</a></li>
+			<li><a href"">Contact Us</a></li>
+		</ul>
+	</nav>
+	<img src="https://picsum.photos/id/123/200/300" alt="image">
+	<img src="https://picsum.photos/id/124/200/300" alt="image">
+	<img src="https://picsum.photos/id/125/200/300" alt="image">
 
 </body>
 
