--- a/main.html
+++ b/main.html
@@ -14,9 +14,9 @@
 	<h1>3 random images</h1>
 	<nav>
 		<ul>
-			<li><a href"">Home</a></li>
-			<li><a href"">About us</a></li>
-			<li><a href"">Contact Us</a></li>
+			<li><a href="">Home</a></li>
+			<li><a href="">About us</a></li>
+			<li><a href="">Contact Us</a></li>
 		</ul>
 	</nav>
 	<img src="https://picsum.photos/id/123/200/300" alt="image">
